@@ -453,8 +453,6 @@ void about_callback (GtkWidget *widget, gpointer parent_window)
 
   gtk_window_set_transient_for (GTK_WINDOW (abox), GTK_WINDOW (parent_window));
   gtk_window_present (GTK_WINDOW (abox));
-
-  return;
 }
 
 
